--- a/src/elements/route-tile-layout/route-tile-layout.html
+++ b/src/elements/route-tile-layout/route-tile-layout.html
@@ -14,15 +14,17 @@
           this.layout = [];
         },
         nodesChanged: function() {
+          this._nodes = this.nodes;
           this.invalidate();
         },
         layoutChanged: function() {
           this.invalidate();
         },
         autoNodes: function() {
-          this.nodes = this.parentNode.children.array().filter(function(node) {
+          this._nodes = this.parentNode.children.array().filter(function(node) {
             switch(node.localName) {
               case "route-tile-layout":
+              case "template":
               case "style":
                 return false
             }
@@ -40,10 +42,10 @@
         },
         // Note: don't call directly, use invalidate() instead
         relayout: function() {
-          if(!this.nodes || this.auto) {
+          if(!this._nodes || this.auto) {
             this.autoNodes();
           }
-          layout(this.layout, this.nodes, this.parentNode);
+          layout(this.layout, this._nodes, this.parentNode);
           this.asyncFire("route-tile-layout");
         }
       });
