--- a/src/elements/route-ui-bar/route-ui-bar.html
+++ b/src/elements/route-ui-bar/route-ui-bar.html
@@ -15,7 +15,7 @@
       <div class="spacer"></div>
       <div id="time">{{hours}}:{{minutes}}</div>
       <div flex></div>
-      <div id="room">Bedroom</div>
+      <div id="room"><content></content></div>
       <div flex></div>
       <div id="weather">{{temperatureString}}&deg;</div>
       <div class="spacer"></div>
