--- a/src/elements/route-ui-bar/route-ui-bar.html
+++ b/src/elements/route-ui-bar/route-ui-bar.html
@@ -6,9 +6,9 @@
 <polymer-element name="route-ui-bar" attributes="">
   <template>
     <link rel="stylesheet" href="route-ui-bar.css">
-    <route-state name="Forecast.currently.apparentTemperature" value="{{temperature}}"></route-state>
-    <route-state name="Forecast.currently.icon" value="{{forecastIcon}}"></route-state>
-    <route-state name="artworkColors" value="{{colors}}"></route-state>
+    <route-state-value name="Forecast.currently.apparentTemperature" value="{{temperature}}"></route-state-value>
+    <route-state-value name="Forecast.currently.icon" value="{{forecastIcon}}"></route-state-value>
+    <route-state-value name="artworkColors" value="{{colors}}"></route-state-value>
 
     <div id="content">
       <polymer-flex-layout></polymer-flex-layout>
