--- a/src/elements/route-ui-media/route-ui-media.html
+++ b/src/elements/route-ui-media/route-ui-media.html
@@ -15,13 +15,13 @@
 <link rel="import" href="../../components/polymer/polymer.html">
 <link rel="import" href="../route-ui-tile/route-ui-tile.html">
 <link rel="import" href="../polymer-image-search/polymer-image-search.html">
-<link rel="import" href="../route-state/route-state.html">
+<link rel="import" href="../route-state-value/route-state-value.html">
 
-<polymer-element name="route-ui-media" attributes="messenger">
+<polymer-element name="route-ui-media" attributes="messenger room">
   <template>
     <link rel="stylesheet" href="route-ui-media.css">
 
-    <route-state name="Sonos.TomBedroom.trackInfo" on-state-change="{{trackChanged}}"></route-state>
+    <route-state-value name="{{'Sonos.'+room+'.trackInfo'}}" on-state-change="{{trackChanged}}"></route-state-value>
 
     <route-ui-tile id="tile" on-route-ui-tile-swipeleft="{{nextTrack}}" on-route-ui-tile-swiperight="{{prevTrack}}"
         on-route-ui-tile-tap="{{playPause}}">
@@ -39,13 +39,13 @@
         this.$.albumart.src = details.artwork;
       },
       playPause: function() {
-        this.messenger.send("TomBedroom.PlayPause");
+        this.messenger.send(this.room+".PlayPause");
       },
       nextTrack: function() {
-        this.messenger.send("TomBedroom.NextTrack");
+        this.messenger.send(this.room+".NextTrack");
       },
       prevTrack: function() {
-        this.messenger.send("TomBedroom.PrevTrack");
+        this.messenger.send(this.room+".PrevTrack");
       },
       imgLoaded: function() {
         var img = this.$.albumart;
