Adding cordova support

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
 
-  <script type="text/javascript" src="scripts/cordova.js"></script>
+  <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="components/platform/platform.js"></script>
   <link rel="import" href="elements/route-app/route-app.html" />
 </head>
