--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,19 @@
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
 
+  <!-- MOBILE-ONLY -->
   <script type="text/javascript" src="/cordova.js"></script>
+  <!-- /MOBILE-ONLY -->
   <script type="text/javascript" src="components/platform/platform.js"></script>
   <link rel="import" href="elements/route-app/route-app.html" />
 </head>
 
 <body>
-  <!-- <route-app></route-app> -->
+  <!-- DESKTOP-ONLY -->
+  <route-app></route-app>
+  <!-- /DESKTOP-ONLY -->
 
+  <!-- MOBILE-ONLY -->
   <script type="text/javascript">
     document.ontouchmove = function(e) {
       e.preventDefault();
@@ -28,5 +33,6 @@
       document.body.appendChild(app);
     });
   </script>
+  <!-- /MOBILE-ONLY -->
 </body>
 </html>
