More cleaning up...

--- a/src/elements/route-tile-content/route-tile-content.html
+++ b/src/elements/route-tile-content/route-tile-content.html
@@ -17,7 +17,7 @@
 <link rel="import" href="../../components/polymer/polymer.html">
 <link rel="import" href="../../components/polymer-flex-layout/polymer-flex-layout.html">
 
-<polymer-element name="route-tile-content" attributes="">
+<polymer-element name="route-tile-content" attributes="animating">
   <template>
     <link rel="stylesheet" href="route-tile-content.css">
     <polymer-flex-layout></polymer-flex-layout>
