--- a/src/elements/route-app/route-app.html
+++ b/src/elements/route-app/route-app.html
@@ -22,52 +22,26 @@
   <template>
     <link rel="stylesheet" href="route-app.css">
 
-    <!-- Tile templates: current control is available as "control" -->
-    <template id="tile-lights">
-      <route-ui-lights messenger="{{$.socket}}" room="{{room}}" name="{{control.name}}" key="{{control.key}}"></route-ui-lights>
-    </template>
-    <template id="tile-media">
-      <route-ui-media messenger="{{$.socket}}" room="{{room}}"></route-ui-media>
-    </template>
-    <template id="tile-power">
-      <route-ui-power></route-ui-power>
-    </template>
-    <template id="tile-voice">
-      <route-ui-speech messenger="{{$.socket}}" room="{{room}}"></route-ui-speech>
-    </template>
-    <template id="tile-blank">
-      <route-ui-tile></route-ui-tile>
-    </template>
-
     <polymer-page></polymer-page>
 
-    <route-power-manager id="powerManager" auto
-        on-route-sleep="{{sleep}}" on-route-wake="{{wake}}">
+    <route-power-manager id="powerManager" auto on-route-sleep="{{sleep}}" on-route-wake="{{wake}}">
     </route-power-manager>
 
-    <route-socket id="socket"></route-socket>
-    <route-state id="state"></route-state>
-    <route-refresh></route-refresh>
+    <route-state></route-state>
+    <route-commander></route-commander>
+
+    <route-state-observer name="rooms" value="{{rooms}}"></route-state-observer>
 
     <polymer-ui-overlay active="{{roomPickerActive}}" backdrop="true" modal="false">
-      <route-ui-room-picker rooms="{{rooms}}" on-route-room-selected="{{ roomSelected }}"></route-ui-room-picker>
+      <route-ui-room-picker rooms="{{rooms}}" current-room="{{room}}"></route-ui-room-picker>
     </polymer-ui-overlay>
 
     <polymer-ui-pages valueattr="id" selected="{{page}}" style="background-color: rgba(0,0,0,.4);">
 
       <!-- Page 1: Tiles -->
       <div id="panel" class="page">
-        <polymer-flex-layout vertical?="{{orientation == 'portrait'}}"></polymer-flex-layout>
-
-        <div style="position: relative" flex>
-          <section id="tiles" on-route-ui-tile-attached="{{tileAttached}}">
-            <route-tile-layout id="tileLayout" layout="{{curLayout}}" auto></route-tile-layout>
-            <template repeat="{{control in curRoom.controls}}">
-              <template ref="{{control.type}}" bind></template>
-            </template>
-          </section>
-        </div>
-
+        <polymer-flex-layout vertical?="{{vertical}}"></polymer-flex-layout>
+        <route-ui-controls controls="{{room.controls}}" vertical?="{{vertical}}"></route-ui-controls>
         <route-ui-bar id="bar" on-tap="{{toggleRoomPicker}}" horizontal?="{{orientation == 'portrait'}}">{{curRoom.shortName}}</route-ui-bar>
       </div>
 
@@ -79,20 +53,7 @@
   </template>
   <script>
     (function() {
-      function transpose(arr) {
-        var trans = [];
 
-        var rows = arr.length,
-            cols = arr[0].length;
-        for(var y = 0; y < cols; y++) {
-          var row = [];
-          trans.push(row);
-          for(var x = 0; x < arr.length; x++) {
-            row.push(arr[x][y]);
-          }
-        }
-        return trans;
-      }
 
       Polymer("route-app", {
         rooms: {
@@ -128,24 +89,8 @@
           },
         },
 
-        layouts: {
-          1: [[1]],
-          2: [[1,2]],
-          3: [[1,1,2],
-              [1,1,3]],
-          4: [[1,2],
-              [3,4]],
-          5: [[1,1,2,3],
-              [1,1,4,5]],
-          6: [[1,2,3],
-              [4,5,6]]
-        },
-
         page: "panel",
-        room: "TomBedroom",
 
-        curRoom: {longName: "N/A", shortName: "N/A", controls: []},
-        curLayout: [[]],
         roomPickerActive: false,
 
         ready: function() {
